--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Test Phaser Game</title>
         <script type="text/javascript" src="phaser.min.js"></script>
+        <script type="text/javascript" src="enemy.js"></script>
+        <script type="text/javascript" src="turret_1.js"></script>
+        <script type="text/javascript" src="turret_bullet_1.js"></script>
         <script type="text/javascript" src="game.js"></script>
     </head>
 
