Separation of files for levels

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="enemy.js"></script>
         <script type="text/javascript" src="turret_1.js"></script>
         <script type="text/javascript" src="turret_bullet_1.js"></script>
+        <script type="text/javascript" src="level_1.js"></script>
         <script type="text/javascript" src="game.js"></script>
     </head>
 
