Create separate spawn rates for 2 different enemy types

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
         <script type="text/javascript" src="phaser.min.js"></script>
         <script type="text/javascript" src="level_1.js"></script>
         <script type="text/javascript" src="level_2.js"></script>
-        <script type="text/javascript" src="enemy.js"></script>
+        <script type="text/javascript" src="enemy_1.js"></script>
+        <script type="text/javascript" src="enemy_2.js"></script>
         <script type="text/javascript" src="turret_1.js"></script>
         <script type="text/javascript" src="turret_bullet_1.js"></script>
         <script type="text/javascript" src="game.js"></script>
