Add and organize lib file for imported libraries

--- a/game/index.html
+++ b/game/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Test Phaser Game</title>
@@ -15,4 +15,20 @@
     <body>
         <button onclick="spawnNextWave()">Respawn Wave</button>
     </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+
+<body>
+    <main id="game"></main>
+    <script src="vendor/phaser.js"></script>
+    <script src="main.js"></script>
+</body>
+
 </html>
